# pasketti

./: .gitignore  PLAN.md  README.md  pyproject.toml
metric/: score.py
nbs/: eda.ipynb  eda.py
pipeline/: preprocess.py  test_parquet.py  upload_hf.py
src/asr/: __init__.py
