[project]
name = "asr"
version = "0.1.0"
description = "Children's word ASR for the DrivenData 'On Top of Pasketti' competition"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "soundfile",
    "transformers",
    "torch",
    "jiwer",
    "ipython>=9.10.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "ipywidgets>=8.1.8",
    "tqdm[notebook]>=4.67.3",
    "torchcodec>=0.10.0",
    "matplotlib>=3.10.8",
    "librosa>=0.11.0",
    "nbconvert>=7.17.0",
]

[tool.ruff]
indent-width = 4

[tool.ruff.format]
indent-style = "space"
